--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,9 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1"
+    "firebase-functions": "^4.3.1",
+    "openai": "^4.26.0",
+    "twitter-api-v2": "^1.16.0"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
